force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/UtFC_Fiscal_Sponsor_Film__c.object-meta.xml
<CustomObject>
    <label>UtFC Fiscal Sponsor Film</label>
    <nameField>
        <label>Film or Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UtFC Fiscal Sponsor Films</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>