force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Additional_Contact_Notes_FS__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact_Notes_FS__c</fullName>
    <label>Additional Contact Notes</label>
    <length>250</length>
    <type>Text</type>
</CustomField>