force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Additional_Renewal_Notes_FS__c.field-meta.xml
<CustomField>
    <fullName>Additional_Renewal_Notes_FS__c</fullName>
    <label>Additional Renewal Notes</label>
    <length>150</length>
    <type>Text</type>
</CustomField>