force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Annual_Report_Year_1__c.field-meta.xml
<CustomField>
    <fullName>Annual_Report_Year_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to first year&apos;s annual report</description>
    <inlineHelpText>Link to first year&apos;s annual report</inlineHelpText>
    <label>Annual Report Year 1</label>
    <referenceTo>Fiscal_Sponsorship_Annual_Report__c</referenceTo>
    <relationshipLabel>UtFC Fiscal Sponsor Films</relationshipLabel>
    <relationshipName>UtFC_Fiscal_Sponsor_Films</relationshipName>
    <type>Lookup</type>
</CustomField>