force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Annual_Report_Year_2__c.field-meta.xml
<CustomField>
    <fullName>Annual_Report_Year_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Annual Report Year 2</label>
    <referenceTo>Fiscal_Sponsorship_Annual_Report__c</referenceTo>
    <relationshipLabel>UtFC Fiscal Sponsor Films (Annual Report Year 2)</relationshipLabel>
    <relationshipName>UtFC_Fiscal_Sponsor_Films1</relationshipName>
    <type>Lookup</type>
</CustomField>