force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Application_Received_FS__c.field-meta.xml
<CustomField>
    <fullName>Application_Received_FS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application Received</label>
    <type>Checkbox</type>
</CustomField>