force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Artemis_Rising_Grantee_FS__c.field-meta.xml
<CustomField>
    <fullName>Artemis_Rising_Grantee_FS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Artemis Rising Grantee</label>
    <type>Checkbox</type>
</CustomField>