force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Artistic_Approach__c.field-meta.xml
<CustomField>
    <fullName>Artistic_Approach__c</fullName>
    <label>Artistic Approach</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>