force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Audience_Engagement_and_Social_Impact__c.field-meta.xml
<CustomField>
    <fullName>Audience_Engagement_and_Social_Impact__c</fullName>
    <description>What actions do you hope for viewers to take after seeing your film? Do you have partnerships with organizations in your issue area already, and if so, how are these relationships informing your project development?</description>
    <label>Audience Engagement and Social Impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>