force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Bios_of_Key_Creative_Personnel__c.field-meta.xml
<CustomField>
    <fullName>Bios_of_Key_Creative_Personnel__c</fullName>
    <label>Bios of Key Creative Personnel</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>