force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/BIPOC_Filmmaker__c.field-meta.xml
<CustomField>
    <fullName>BIPOC_Filmmaker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BIPOC Filmmaker</label>
    <type>Checkbox</type>
</CustomField>