force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/CASESAFE_Id__c.field-meta.xml
<CustomField>
    <fullName>CASESAFE_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>CASESAFE Id</label>
    <type>Text</type>
</CustomField>