force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Committee_Accepted_FS__c.field-meta.xml
<CustomField>
    <fullName>Committee_Accepted_FS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Committee Accepted</label>
    <type>Checkbox</type>
</CustomField>