force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Contact_City_FS__c.field-meta.xml
<CustomField>
    <fullName>Contact_City_FS__c</fullName>
    <label>Contact City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>