force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Contact_Country__c.field-meta.xml
<CustomField>
    <fullName>Contact_Country__c</fullName>
    <label>Contact Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>