force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Contact_First_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Contact_First_Name_Formula__c</fullName>
    <formula>LEFT(Contact_Name_FS__c, FIND( &quot; &quot;, Contact_Name_FS__c ) -1 )</formula>
    <label>Contact - First Name</label>
    <type>Text</type>
</CustomField>