force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Contact_Last_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Contact_Last_Name_Formula__c</fullName>
    <formula>RIGHT(Contact_Name_FS__c, LEN(Contact_Name_FS__c) - FIND(&quot; &quot;, Contact_Name_FS__c))</formula>
    <inlineHelpText>Created from the Contact name field</inlineHelpText>
    <label>Contact - Last Name</label>
    <type>Text</type>
</CustomField>