force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Contact_Name_FS__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_FS__c</fullName>
    <label>Contact Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>