force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Contact_Primary_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Primary_Role__c</fullName>
    <label>Contact Primary Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Producer</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Producer/Director</fullName>
            </value>
            <value>
                <fullName>Co-Director</fullName>
            </value>
            <value>
                <fullName>Co-Producer</fullName>
            </value>
            <value>
                <fullName>Unit Production Manager</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>