force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Contact_State_FS__c.field-meta.xml
<CustomField>
    <fullName>Contact_State_FS__c</fullName>
    <label>Contact State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>