force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Contact_Zip__c.field-meta.xml
<CustomField>
    <fullName>Contact_Zip__c</fullName>
    <label>Contact Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>