force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Contract_Expiration_Date_FS__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiration_Date_FS__c</fullName>
    <label>Grant Agreement Expiration Date</label>
    <type>Date</type>
</CustomField>