force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Current_Sample_Rough_Cut_Link__c.field-meta.xml
<CustomField>
    <fullName>Current_Sample_Rough_Cut_Link__c</fullName>
    <label>Current Sample/Rough Cut Link</label>
    <type>Url</type>
</CustomField>