force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Date_Acceptance_or_Denial_Letter_Sent_FS__c.field-meta.xml
<CustomField>
    <fullName>Date_Acceptance_or_Denial_Letter_Sent_FS__c</fullName>
    <label>Date Acceptance or Denial Letter Sent</label>
    <type>Date</type>
</CustomField>