force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Date_Application_was_Received_FS__c.field-meta.xml
<CustomField>
    <fullName>Date_Application_was_Received_FS__c</fullName>
    <label>Date Application was Received</label>
    <type>Date</type>
</CustomField>