force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Date_Exhibit_A_received_FS__c.field-meta.xml
<CustomField>
    <fullName>Date_Exhibit_A_received_FS__c</fullName>
    <label>Date of Material Submission</label>
    <type>Date</type>
</CustomField>