force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Date_Funds_were_sent_FS__c.field-meta.xml
<CustomField>
    <fullName>Date_Funds_were_sent_FS__c</fullName>
    <label>Date Funds were sent</label>
    <type>Date</type>
</CustomField>