force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Date_of_Exhibit_B_FS__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Exhibit_B_FS__c</fullName>
    <label>Date of Final Report Submitted</label>
    <type>Date</type>
</CustomField>