force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Date_of_Grant_Agreement_AR_FS__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Grant_Agreement_AR_FS__c</fullName>
    <label>Date of Grant Agreement AR</label>
    <type>Date</type>
</CustomField>