force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Date_of_Renewed_Contract_FS__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Renewed_Contract_FS__c</fullName>
    <label>Date of Renewed Contract</label>
    <type>Date</type>
</CustomField>