force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Date_Progress_Report_Received_FS__c.field-meta.xml
<CustomField>
    <fullName>Date_Progress_Report_Received_FS__c</fullName>
    <label>Date Annual Report Received</label>
    <type>Date</type>
</CustomField>