force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Date_Sponsorship_Began_FS__c.field-meta.xml
<CustomField>
    <fullName>Date_Sponsorship_Began_FS__c</fullName>
    <label>Date Sponsorship Began</label>
    <type>Date</type>
</CustomField>