force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Date_Submitted_to_Committee__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted_to_Committee__c</fullName>
    <label>Date Submitted to Committee</label>
    <type>Date</type>
</CustomField>