force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Dates_and_Documentation_Notes_FS__c.field-meta.xml
<CustomField>
    <fullName>Dates_and_Documentation_Notes_FS__c</fullName>
    <label>Dates and Documentation Notes</label>
    <type>TextArea</type>
</CustomField>