force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Director_FS__c.field-meta.xml
<CustomField>
    <fullName>Director_FS__c</fullName>
    <label>Director</label>
    <length>50</length>
    <type>Text</type>
</CustomField>