force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Director_s_Prior_Work_Sample__c.field-meta.xml
<CustomField>
    <fullName>Director_s_Prior_Work_Sample__c</fullName>
    <label>Director&apos;s Prior Work Sample</label>
    <type>Url</type>
</CustomField>