force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Distribution_and_Marketing_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Distribution_and_Marketing_Strategy__c</fullName>
    <label>Distribution and Marketing Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>