force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Donation_Form_URL__c.field-meta.xml
<CustomField>
    <fullName>Donation_Form_URL__c</fullName>
    <label>Donation Form URL</label>
    <type>Url</type>
</CustomField>