force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/E_O_Insurance__c.field-meta.xml
<CustomField>
    <fullName>E_O_Insurance__c</fullName>
    <label>E&amp;O Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>