force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Female_Director__c.field-meta.xml
<CustomField>
    <fullName>Female_Director__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Female Director</label>
    <type>Checkbox</type>
</CustomField>