force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Festivals_and_Awards_FS__c.field-meta.xml
<CustomField>
    <fullName>Festivals_and_Awards_FS__c</fullName>
    <label>Festivals and Awards</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>