force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Film_Accepted_to_FS_Program__c.field-meta.xml
<CustomField>
    <fullName>Film_Accepted_to_FS_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Film Accepted to FS Program</label>
    <type>Checkbox</type>
</CustomField>