force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Film_Center_Screening_FS__c.field-meta.xml
<CustomField>
    <fullName>Film_Center_Screening_FS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Film Center Screening</label>
    <referenceTo>UtFC_Film_Event__c</referenceTo>
    <relationshipLabel>UtFC Fiscal Sponsor Films</relationshipLabel>
    <relationshipName>UtFC_Fiscal_Sponsor_Films</relationshipName>
    <type>Lookup</type>
</CustomField>