force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Film_Company_Account__c.field-meta.xml
<CustomField>
    <fullName>Film_Company_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Film Company - Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>UtFC Fiscal Sponsor Films</relationshipLabel>
    <relationshipName>UtFC_Fiscal_Sponsor_Films_Account_Level</relationshipName>
    <type>Lookup</type>
</CustomField>