force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Film_Company_Name_FS__c.field-meta.xml
<CustomField>
    <fullName>Film_Company_Name_FS__c</fullName>
    <label>Film Company Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>