force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Film_Website_FS__c.field-meta.xml
<CustomField>
    <fullName>Film_Website_FS__c</fullName>
    <label>Film Website</label>
    <type>Url</type>
</CustomField>