force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Fiscal_Fee_Notes_and_Comments_FS__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Fee_Notes_and_Comments_FS__c</fullName>
    <label>Fiscal Fee Notes and Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>