force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Fiscal_Fee_Rate_FS__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Fee_Rate_FS__c</fullName>
    <label>Fiscal Fee Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>