force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Fiscal_Fee_Rate_Note__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Fee_Rate_Note__c</fullName>
    <label>Fiscal Fee Rate Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>