force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Former_project_titles__c.field-meta.xml
<CustomField>
    <fullName>Former_project_titles__c</fullName>
    <inlineHelpText>Has this project had any other names?</inlineHelpText>
    <label>Former project title</label>
    <type>TextArea</type>
</CustomField>