force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Funding_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Funding_to_Date__c</fullName>
    <label>Funding to Date</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>