force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Fundraising_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Strategy__c</fullName>
    <label>Fundraising Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>