force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Funds_Received_AR__c.field-meta.xml
<CustomField>
    <fullName>Funds_Received_AR__c</fullName>
    <label>Funds Received AR</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>