force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Funds_Sent_to_FS__c.field-meta.xml
<CustomField>
    <fullName>Funds_Sent_to_FS__c</fullName>
    <label>Funds Sent To</label>
    <length>50</length>
    <type>Text</type>
</CustomField>