force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Geralyn_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Geralyn_Involvement__c</fullName>
    <description>Was Geralyn involved in this project?  If so, how?</description>
    <inlineHelpText>Was Geralyn involved in this project?  If so, how?</inlineHelpText>
    <label>Geralyn Involvement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executive Producer</fullName>
            </value>
            <value>
                <fullName>Producer</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Fundraiser</fullName>
            </value>
            <value>
                <fullName>Collaborator</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>