force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Hidden_Update_Trigger_Field__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Update_Trigger_Field__c</fullName>
    <description>Used to trigger updates through G Connector (Salesforce to Google Docs) and similar</description>
    <label>Hidden Update Trigger Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>