force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/IMDB_Page__c.field-meta.xml
<CustomField>
    <fullName>IMDB_Page__c</fullName>
    <label>IMDB Page</label>
    <type>Url</type>
</CustomField>