force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Impact_Partner_Film_FS__c.field-meta.xml
<CustomField>
    <fullName>Impact_Partner_Film_FS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Impact Partner Film</label>
    <type>Checkbox</type>
</CustomField>