force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Instagram_FS__c.field-meta.xml
<CustomField>
    <fullName>Instagram_FS__c</fullName>
    <label>Instagram</label>
    <type>Url</type>
</CustomField>