force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Intended_Audience__c.field-meta.xml
<CustomField>
    <fullName>Intended_Audience__c</fullName>
    <label>Intended Audience</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>