force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/International_Film__c.field-meta.xml
<CustomField>
    <fullName>International_Film__c</fullName>
    <defaultValue>false</defaultValue>
    <label>International Film</label>
    <type>Checkbox</type>
</CustomField>