force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Link_to_Trailer__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Trailer__c</fullName>
    <inlineHelpText>Link to trailer of the film.</inlineHelpText>
    <label>Link to Trailer</label>
    <type>Url</type>
</CustomField>