force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Local_Filmmaker_FS__c.field-meta.xml
<CustomField>
    <fullName>Local_Filmmaker_FS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Local Filmmaker</label>
    <type>Checkbox</type>
</CustomField>