force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Main_Grant_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_Grant_Contact__c</fullName>
    <label>Main Grant Contact</label>
    <length>20</length>
    <type>Text</type>
</CustomField>