force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Main_Grant_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Main_Grant_Contact_Email__c</fullName>
    <label>Main Grant Contact Email</label>
    <type>Email</type>
</CustomField>