force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Notes_and_Comments_re_Artemis_grants_FS__c.field-meta.xml
<CustomField>
    <fullName>Notes_and_Comments_re_Artemis_grants_FS__c</fullName>
    <label>Notes and Comments re: Artemis grants</label>
    <length>255</length>
    <type>Text</type>
</CustomField>