force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/One_Line_Description_FS__c.field-meta.xml
<CustomField>
    <fullName>One_Line_Description_FS__c</fullName>
    <label>One Line Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>