force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Outside_Grant_3__c.field-meta.xml
<CustomField>
    <fullName>Outside_Grant_3__c</fullName>
    <label>Outside Grant 3</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>