force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Outside_Grant_Reporting_FS__c.field-meta.xml
<CustomField>
    <fullName>Outside_Grant_Reporting_FS__c</fullName>
    <label>Outside Grant Reporting</label>
    <type>TextArea</type>
</CustomField>