force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Overall_Budget_FS__c.field-meta.xml
<CustomField>
    <fullName>Overall_Budget_FS__c</fullName>
    <label>Overall Budget</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>