force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Password_for_Current_Work__c.field-meta.xml
<CustomField>
    <fullName>Password_for_Current_Work__c</fullName>
    <label>Password for Current Work</label>
    <type>TextArea</type>
</CustomField>