force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Played_Sundance_Film_Festival__c.field-meta.xml
<CustomField>
    <fullName>Played_Sundance_Film_Festival__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Played at the Sundance Film Festival</description>
    <inlineHelpText>Played at the Sundance Film Festival</inlineHelpText>
    <label>Played Sundance Film Festival</label>
    <type>Checkbox</type>
</CustomField>