force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Points_of_Contact_document_signed_FS__c.field-meta.xml
<CustomField>
    <fullName>Points_of_Contact_document_signed_FS__c</fullName>
    <label>Points of Contact document signed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>