force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary Contact</description>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>UtFC Fiscal Sponsor Film - Primary Contact</relationshipLabel>
    <relationshipName>UtFC_Fiscal_Sponsor_Films</relationshipName>
    <type>Lookup</type>
</CustomField>