force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Producers_FS__c.field-meta.xml
<CustomField>
    <fullName>Producers_FS__c</fullName>
    <label>Producers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>