force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Production_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Production_Timeline__c</fullName>
    <label>Production Timeline</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>