force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Project_Type_FS__c.field-meta.xml
<CustomField>
    <fullName>Project_Type_FS__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Documentary</fullName>
                <default>true</default>
                <label>Documentary Feature</label>
            </value>
            <value>
                <fullName>Documentary Series</fullName>
            </value>
            <value>
                <fullName>Short Documentary</fullName>
                <label>Documentary Short</label>
            </value>
            <value>
                <fullName>Narative Series</fullName>
            </value>
            <value>
                <fullName>Narrative</fullName>
                <label>Narrative Feature</label>
            </value>
            <value>
                <fullName>Short Narrative</fullName>
                <label>Narrative Short</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Series</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>