force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Proposal_FS__c.field-meta.xml
<CustomField>
    <fullName>Proposal_FS__c</fullName>
    <label>Proposal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>