force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Related_Campaign_FS__c.field-meta.xml
<CustomField>
    <fullName>Related_Campaign_FS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Campaign</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Campaign.Parent.ParentId</field>
            <operation>equals</operation>
            <value>70146000000DS2XAAW</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>UtFC Fiscal Sponsor Films</relationshipLabel>
    <relationshipName>UtFC_Fiscal_Sponsor_Films</relationshipName>
    <type>Lookup</type>
</CustomField>