force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Related_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Campaign_ID__c</fullName>
    <formula>Related_Campaign_FS__r.CASESAFE_Id__c</formula>
    <label>Related Campaign ID</label>
    <type>Text</type>
</CustomField>