force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Report_Requested_FS__c.field-meta.xml
<CustomField>
    <fullName>Report_Requested_FS__c</fullName>
    <label>Report Requested</label>
    <type>Date</type>
</CustomField>