force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Requested_Grant_Amount_AR_FS__c.field-meta.xml
<CustomField>
    <fullName>Requested_Grant_Amount_AR_FS__c</fullName>
    <label>Requested Grant Amount AR</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>