force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Requested_Report_Due_Date_FS__c.field-meta.xml
<CustomField>
    <fullName>Requested_Report_Due_Date_FS__c</fullName>
    <label>Annual Report Due Date</label>
    <type>Date</type>
</CustomField>