force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Returning_Filmmaker__c.field-meta.xml
<CustomField>
    <fullName>Returning_Filmmaker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Returning Filmmaker/Producer</label>
    <type>Checkbox</type>
</CustomField>